# ESP-IDF

CLIENTE_HTTP/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
CLIENTE_HTTP/main/: CMakeLists.txt  main.c
DRAFT/main/: main3.c
JOYSTKBT/: sdkconfig
JOYSTKBT/main/: CMakeLists.txt  ble_to_com.py  nus_ble_main_gpt.c  nus_ble_main_gpt2.c  prompt.txt
MPUTestDeepSeek/: sdkconfig
MPUTestDeepSeek/main/: CMakeLists.txt  main.c
MPUTestDeepSeek2/MPUTestDeepSeek2/: CMakeLists.txt  sdkconfig  sdkconfig.old
MPUTestDeepSeek2/MPUTestDeepSeek2/main/: CMakeLists.txt  HCM588L3L.c  HCM588L3L.h  SH1106.c  SH1106.h  idf_component.yml  mainDRAFT.c  mainHMC588L3L.c  mainHMC588L3L_light.c  mainMPU6050.c  mainMisc.c  mainSH1106.c
NEB_SEMP_ADCS/: CMakeLists.txt  sdkconfig  sdkconfig.old
NEB_SEMP_ADCS/main/: CMakeLists.txt  main1.c  main2.c
NEB_SEMP_PCNT/: sdkconfig  sdkconfig.old
NEB_SEMP_PCNT/main/: CMakeLists.txt  main.c
NEB_SEMP_SLEEP/: sdkconfig  sdkconfig.old
NEB_SEMP_SLEEP/main/: CMakeLists.txt  main_EXT.c  main_RTC.c
NEB_SEMP_WTCHDG/: sdkconfig  sdkconfig.old
NEB_SEMP_WTCHDG/main/: CMakeLists.txt  main_TWDT.c
NEB_STF_MISC_INTRO/main/: main.c
SERVER_WEB/main/: CMakeLists.txt
spp_server/: sdkconfig  sdkconfig.old
spp_server/main/: ble_to_com.py  ble_to_com2.py  main.c  run.bat  run2.bat
